--- a/translation/it/maylons_grave.po
+++ b/translation/it/maylons_grave.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2011-10-21 22:07+0200\n"
+"PO-Revision-Date: 2011-10-25 21:51+0200\n"
 "Last-Translator: Eugenio Fagioli <eugenio.fagioli@gmail.com>\n"
 "Language-Team: Italiano <>\n"
 "Language: it\n"
@@ -34,7 +34,7 @@ msgstr "Mar! Nom Togubri!"
 
 #: maylons_grave.xml
 msgid "Wait, great human warriors. Do not kill!"
-msgstr "Aspettare, grossi guerrieri umani. No uccidere!"
+msgstr "Aspettare, grossi guerrieri umani. No uccidere noi!"
 
 #: maylons_grave.xml
 msgid ""
@@ -61,8 +61,8 @@ msgid ""
 "necromancer animated some undead down in the crypt. I should take a look at "
 "it."
 msgstr ""
-"Mi sono imbattuto in alcuni goblin nel vecchio Cimitero di Maylon. E a "
-"quanto dice uno dei loro sciamani un necromante ha animato dei non-morti nei "
+"Mi sono imbattuto in alcuni goblin nel vecchio Cimitero di Maylon. A quanto "
+"diceva il loro sciamano un necromante ha animato dei non morti nei "
 "sotterranei della cripta. Dovrei darci un'occhiata."
 
 #: maylons_grave.xml
@@ -71,8 +71,8 @@ msgid ""
 "Something is going on in this grave. Maybe I should take a look at it."
 msgstr ""
 "Mi sono imbattuto in alcuni goblin nel vecchio Cimitero di Maylon, erano "
-"stati appena aggrediti da uno zombi. Sta succedendo qualcosa in quel "
-"cimitero. Forse dovrei darci un'occhiata."
+"stati aggrediti da uno zombi. Sta succedendo qualcosa in quel cimitero. "
+"Forse dovrei darci un'occhiata."
 
 #: maylons_grave.xml
 msgid "aisMaylonsGraveEntry"
@@ -92,7 +92,7 @@ msgstr "No"
 
 #: maylons_grave.xml
 msgid "Gab Resh"
-msgstr "La Tomba di Maylons - Gab Resh"
+msgstr "Gab Resh"
 
 #: maylons_grave.xml
 msgid "A goblin who wants to talk?"
@@ -100,15 +100,15 @@ msgstr "Un goblin che vuole parlare?"
 
 #: maylons_grave.xml
 msgid "Yes. No hurt, no kill."
-msgstr "Si'. Nessun ferito, nessun morto."
+msgstr "Si'. No ferire, no uccidere."
 
 #: maylons_grave.xml
 msgid "Gab'Resh and his only harmless rustlers. No bandits."
-msgstr "Gab'Resh con solo i suoi innocui ladruncoli. Niente assassini."
+msgstr "Gab'Resh e innoqui ladruncoli. No banditi."
 
 #: maylons_grave.xml
 msgid "You listen, yes?"
-msgstr "Hai sentito, vero?"
+msgstr "Ascolare, vero?"
 
 #: maylons_grave.xml
 msgid "What will you do?"
@@ -132,25 +132,24 @@ msgstr "Cosa puo' aver da dire un goblin?"
 
 #: maylons_grave.xml
 msgid "We often hide here."
-msgstr "Spesso ci nascondiamo qui."
+msgstr "Spesso nascondiamo qui."
 
 #: maylons_grave.xml
 msgid "No humans coming, and if do, they never return from depth of cave."
 msgstr ""
-"Nessun umano che stia arrivando, e se mai arrivasse, non tornerebbe mai "
-"dalle profondita' della caverna."
+"Nessun umano andare, e se andare, non tornare da profondita' di grotta."
 
 #: maylons_grave.xml
 msgid "But last moon black human came."
-msgstr "Ma con la scorsa luna venne un uomo nero."
+msgstr "Ma scorsa luna venire uomo nero."
 
 #: maylons_grave.xml
 msgid ""
 "Now horror of the depth wandering to surface, too and being after poor "
 "goblins who never not wants to steal anything."
 msgstr ""
-"Adesso gli orrori delle profondita' camminano in superfice, troppi e alla "
-"ricerca di poveri goblin che non hanno mai voluto rubare niente."
+"Adesso orrori delle profondita' camminare in superfice, troppi e mangiano "
+"poveri goblin che non velere rubargli niente."
 
 #: maylons_grave.xml
 msgid "That almost sounds as if a necromancer came by."
@@ -162,9 +161,7 @@ msgstr "Non posso ignorare un problema simile."
 
 #: maylons_grave.xml
 msgid "We cannot leave such a problem amidst this under-guarded region."
-msgstr ""
-"Non possiamo lasciare un simile problema irrisolto in questa regione non "
-"sorvegliata."
+msgstr "Non posso ignorare un problema simile."
 
 #: maylons_grave.xml
 msgid "Who knows what could happen?"
@@ -175,7 +172,7 @@ msgid ""
 "Really, I should free those poor bound souls and send them off to a short "
 "brake in Harad's Hell."
 msgstr ""
-"Veramente, io potrei liberare quelle povere anime imprigionate e spedirle ad "
+"Sul serio, si dovrebbe liberare quelle povere anime dannate e spedirle ad "
 "una gitarella all'inferno di Harad."
 
 #: maylons_grave.xml
@@ -183,7 +180,7 @@ msgid ""
 "Really, we should free those poor bound souls and send them off to a short "
 "brake in Harad's Hell."
 msgstr ""
-"Veramente, potremmo liberare quelle povere anime imprigionate e spedirle ad "
+"Sul serio, si dovrebbe liberare quelle povere anime dannate e spedirle ad "
 "una gitarella all'inferno di Harad."
 
 #: maylons_grave.xml
@@ -192,20 +189,20 @@ msgstr "Meglio loro che noi."
 
 #: maylons_grave.xml
 msgid "Good warning, yes? Mighty warrior-humans let us live, no?"
-msgstr ""
-"Un buon consiglio, no? I grande guerrieri umani ci lasceranno vivere, no?"
+msgstr "Buono consiglio, si? I grande guerrieri umani ci lasciare vivere, no?"
 
 #: maylons_grave.xml
 msgid ""
 "Get lost. I have better things to do than killing a band of pathetic goblins."
-msgstr "Ho di meglio da fare che uccidere una banda di goblin patetici."
+msgstr ""
+"Smammate. Ho di meglio da fare che uccidere una banda di patetici goblin."
 
 #: maylons_grave.xml
 msgid ""
 "Get lost. we have better things to do than killing a band of pathetic "
 "goblins."
 msgstr ""
-"Sparisci. Abbiamo di meglio da fare che uccidere una banda di patetici "
+"Smammate. Abbiamo di meglio da fare che uccidere una banda di patetici "
 "goblin."
 
 #: maylons_grave.xml
@@ -214,7 +211,7 @@ msgstr "Miserabile marmaglia! Ora morirete!"
 
 #: maylons_grave.xml
 msgid "Miserable brood! Slay them all!"
-msgstr "Miserabile marmaglia! Uccideteli tutti!"
+msgstr "Miserabile marmaglia! Uccidete tutti!"
 
 #: maylons_grave.xml
 msgid "Get lost, before I change my mind!"
@@ -222,7 +219,7 @@ msgstr "Sparisci, prima che cambi idea!"
 
 #: maylons_grave.xml
 msgid "aisMaylonsGraveL1"
-msgstr "La Tomba di Maylons - Primo livello"
+msgstr "La Tomba di Maylons - -Grotte"
 
 #: maylons_grave.xml
 msgid "aisMaylonsGraveL2"
@@ -238,7 +235,7 @@ msgstr "Possa tu compiere altre grandi gesta."
 
 #: maylons_grave.xml
 msgid "Akerans blessing to you."
-msgstr "Akerans ti benedica."
+msgstr "Che la benedizione di Akerans ti protegga."
 
 #: maylons_grave.xml
 msgid "My sarcophagus contains many remains of my mortal life."
@@ -249,7 +246,7 @@ msgid ""
 "For a long time now I have no use for it anymore. Choose yourself a weapon "
 "you like."
 msgstr ""
-"E ormai da molto tempo che non le uso piu'. Scegli l'arma che piu' "
+"E ormai da molto tempo che non li uso piu'. Scegli l'arma che piu' "
 "preferisci."
 
 #: maylons_grave.xml
@@ -266,5 +263,9 @@ msgid ""
 "I wander if he would have said that if he had known that he will make a "
 "detour to Harad's Hell first?"
 msgstr ""
-"Mi chiedo se voleva dire che sapeva che prima gli tocchera' una deviazione "
-"per l'inferno di Herad."
+"Mi chiedo se sapesse che prima gli tocchera' una deviazione per l'inferno di "
+"Harad?"
+
+#: maylons_grave.xml
+msgid "name..\" received an item from Maylons Grave."
+msgstr ""
